--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="myStyles.css">
 </head>
 
@@ -10,36 +11,36 @@
     <div class="main-container">
         <form class="form">
             <div class="header">
-                <textarea id="passwordField" type="text" rows="3" cols="1" readonly></textarea>
-                <span id="securityIndicator">text</span>
-                <button id="copyBtn">Copy</button>
+                <textarea id="passwordField" type="text" rows="3" cols="1" readonly disabled title="password field"></textarea>
+                <p class="security-container">Password is <span id="securityIndicator"></span></p>
+                <button class="buttons" id="copyBtn">Copy</button>
             </div>
             <div class="options-container">
                 <div class="options-items">
                     <label for="volume">Length</label>
-                    <input type="range" id="length" name="volume" value="64" min="8" max="64"
+                    <input type="range" id="length" name="volume" value="12" min="4" max="18"
                         oninput="this.nextElementSibling.value = this.value" />
-                    <output id="numberOfCharacters">64</output>
+                    <output id="numberOfCharacters">12</output>
                 </div>
                 <label class="options-items">Use upper case (A-Z)
-                    <input type="checkbox"  id="upperCaseCheckbox" class="checkboxes" name="upper case" checked="checked">
-                    <span class="checkmark"></span>
+                    <input type="checkbox"  id="upperCaseCheckbox" class="checkboxes" name="upper case" checked="checked" role="switch">
                 </label>
                 <label class="options-items">User lower case (a-z)
-                    <input type="checkbox" id="lowerCaseCheckbox" class="checkboxes"  name="lower case" checked="checked">
-                    <span class="checkmark"></span>
+                    <input type="checkbox" id="lowerCaseCheckbox" class="checkboxes"  name="lower case" checked="checked" role="switch">               
                 </label>
                 <label class="options-items">Use numbers (0-9)
-                    <input type="checkbox" id="numberCheckbox" class="checkboxes"  name="numbers" checked="checked">
+                    <input type="checkbox" id="numberCheckbox" class="checkboxes"  name="numbers" checked="checked" role="switch">
                     <span class="checkmark"></span>
                 </label>
                 <label class="options-items">Use special characters
-                    <input type="checkbox" id="specialCharactersCheckbox" class="checkboxes"  name="special characters" checked="checked">
-                    <span class="checkmark"></span>
+                    <input type="checkbox" id="specialCharactersCheckbox" class="checkboxes"  name="special characters" checked="checked" role="switch">
+                </label>
+                <label class="options-items">Exclude repeating characters
+                    <input type="checkbox" id="repeatingCharactersCheckbox" class="checkboxes"  name="repeating characters" role="switch">
                 </label>
             </div>
             <div class="footer">
-                <button id="btn-generate">Generate password</button>
+                <button class="buttons" id="btn-generate">Generate password</button>
             </div>
         </form>
     </div>
